Finished work on HTML page

--- a/index.html
+++ b/index.html
@@ -1,1 +1,51 @@
-<p>Dhwani Patel</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>CookitUp w/ Dee</title>
+   </head>
+
+   <body>
+       <header> <h1>CookitUp w/ Dee</h1></header>
+       <main> 
+           <article> <h2>Paneer Pasta</h2></article>
+           <section> 
+               <h3>Ingredients Needed:</h3>
+               <dt><p>2 tomatoes<br></br>
+                  1 onion<br></br>
+                  10-15 cashew<br></br>
+                  2 chilli<br></br>
+                  1/2 inch ginger<br></br>
+                  1/2 stick cinnamon<br></br> 
+                  5 black pepper<br></br>
+                  5 cloves<br></br>
+                  2 tbsp unsalted butter<br></br>
+                  8-10 paneer cubes<br></br>
+                  2 tbsp tomato paste(canned)<br></br>
+                  salt to taste<br></br>
+                  sugar to taste<br></br>
+                  2 tsp turmeric<br></br>
+                  2 tsp red chilli powder<br></br> 
+                  1 tsp coriander powder<br></br>
+                  3 tbsp heavy cream<br></br>
+                  2 cups pasta of your choice<br></br>
+               </p></dt>
+
+           </section>
+           <section> 
+               <h3> Steps to make Paneer Pasta:</h3>
+                <p>(Note: Tofu can be used in place of Paneer.)</p>
+                <h4> Step 1:</h4> <p>Make a paste of tomatoes, cashew, ginger, onion, chilli, cinnamon stick, cloves, black pepper by blending them into a puree.</p>
+                <h4>Step 2:</h4> <p>Strain the puree to get a smooth flowing paste.</p>
+                <h4>Step 3:</h4> <p>Heat a pan and add butter. Let the butter melt and add paneer cubes to it.Let them get a little ligt brown and bell peppers.</p>
+                <h4>Step 4:</h4> <p>Add tomato paste and stir it. Add the smooth paste to the pan and mix it. Add 1/2 cup water to it.</p>
+                <h4>Step 5:</h4> <p>Add salt, sugar, turmeric, red chilli powder, coriander powder to the paste.</p>
+                <h4>Step 6:</h4> <p>Add heavy cream. Add water if needed. Let it cook for 10 mintues with lid on.</p>
+                <h4>Step 7:</h4> <p>Add pasta and mix it. Serve Hot.</p>
+            </section>
+       </main>
+       <footer>
+           <p>&copy 2020 Dhwani Patel</p>
+       </footer>
+   </body>
+</html>
